<resources>
    <string name="app_name">Maréu</string>
    <string name="new_reu">Nouvelle Réunion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_text">Description Text</string>
    <string name="email_text">Email text</string>
    <string name="delete_button">Delete_Button</string>
    <string name="color_img">Color_img</string>
    <string name="list_of_participants">E-mail des participants</string>
    <string name="menu_filter">Filtrage</string>
    <string name="date_filter">Filtre par date</string>
    <string name="room_filter">Filtre par salle</string>
    <string name="error_empty_field">Ne peut pas être vide</string>
    <string name="error_empty_date">Veuillez sélectionner une date</string>
    <string name="error_invalid_mail">Le mail est incorrect</string>
    <string name="meeting_exist">"Un Meeting utilisant cette salle existe déja sur cette plage Horaire"</string>
    <string name="error_field">Erreur dans les éléments ou éléments manquants</string>
    <string name="error_invalid_time_after">"L'heure de fin doit être supérieur a l'heure de début"</string>
    <string name="error_invalid_time_begin">"L'heure de debut doit être inférieur a l'heure de fin"</string>
    <string name="select_filter">"Selectionner Salle"</string>
    <string name="reset">"Reset"</string>
    <string name="Search_item">Rechercher</string>
    <string name="Add">Ajouter</string>
</resources>
